src/index.css
body {
  margin: 0;
  background: linear-gradient(
        45deg,
        rgb(245, 5, 152) 0%,
        rgba(225, 5, 34, 0) 70%
      )
      repeat scroll 0% 0%,
    linear-gradient(135deg, rgb(26, 10, 107) 10%, rgba(49, 5, 209, 0) 80%)
      repeat scroll 0% 0%,
    linear-gradient(
        225deg,
        hsla(169, 94%, 35%, 1) 10%,
        rgba(10, 219, 216, 0) 80%
      )
      repeat scroll 0% 0%,
    rgba(0, 0, 0, 0)
      linear-gradient(315deg, rgb(189, 5, 245) 100%, rgba(9, 245, 5, 0) 70%)
      repeat scroll 0% 0%;
  color: white;
  font-family: 'Roboto Slab', sans-serif;
}

nav {
  background-color: #212121;
}


#about-text, #hero-text,
#work,
#experience {
  margin-left: auto;
  margin-right: auto;
  margin-top: 300px;
  margin-bottom: 300px;
  float: unset;
}

#particles-js {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.btn {
  background-color: #9932cc;
  margin: 1px;
}

#card-text {
  color: black;
}

i {
  padding: 8px;
}

.carousel {
  overflow: unset;
  margin: 10px;
}

.card {
  max-width: 40%;
  text-align: left;
  max-height: 20%;
  border-radius: 10px;
}

p {
  margin: 3px;
}

nav .brand-logo {
  position: unset;
}

@media screen and (max-width: 850px) {

  #tsparticles-canvas-el {
    height: 100vh;
    width: 100vw;
  }

  #about {
    height: 300px;
  }

  #about-text, #hero-text,
  #work,
  #experience {
    margin-left: auto;
    margin-right: auto;
    margin-top: 200px;
    margin-bottom: auto;
    float: unset;
  }

  #particles-js {
    position: fixed;
    width: 100vw !important;
    height: 100vh !important;
  }

  .row .col.s4 {
    width: 100vw;
  }

  .card {
    max-width: 100%;
  }

  nav {
    position: fixed;
    height: 100px;
    left: 0;
  }

  #parallax-img {
    transform: translate3d(-50%, 100px, 0px);
  }

  #about-text {
    position: left;
  }

  .card-action {
    max-height: 50%;
  }

  .carousel.carousel-slider .carousel-item {
    min-height: 325px;
  }
}

